Impl. paste method + update to java 21